Finish up code, try fix centroids generating too close

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,5 +17,5 @@
 }
 
 #canvas {
-    border: 1px solid black;
+    border: 3px solid black;
 }
